--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,62 @@
-Django==3.2.16
-pytest==6.2.4
-pytest-pythonpath==0.7.3
+asgiref==3.6.0
+atomicwrites==1.4.1
+attrs==22.2.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.0.12
+class-registry==2.1.2
+colorama==0.4.6
+colorclass==2.2.2
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==3.4.8
+defusedxml==0.7.1
+Django==3.0.6
+django-advanced-filters==2.0.0
+django-allauth==0.41.0
+django-db==0.0.7
+django-filter==2.0.0
+django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
+djoser==2.1.0
+docopt==0.6.2
+filters==1.3.2
+idna==3.4
+importlib-metadata==1.7.0
+iniconfig==1.1.1
+isort==5.11.4
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+oauthlib==3.2.2
+packaging==22.0
 Pillow==9.3.0
+pip-upgrader==1.4.15
+pipreqs==0.4.11
+pluggy==0.13.1
+py==1.11.0
+pycparser==2.21
 PyJWT==2.1.0
+PyMySQL==1.0.2
+pytest==6.2.4
+pytest-django==4.4.0
+pytest-pythonpath==0.7.3
+python-dateutil==2.8.2
+python3-openid==3.2.0
+pytz==2022.7
+regex==2022.10.31
 requests==2.26.0
+requests-oauthlib==1.3.1
+simplejson==3.18.0
+six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.3.0
+sqlparse==0.4.3
+terminaltables==3.1.10
+toml==0.10.2
+typing_extensions==4.4.0
+uritemplate==4.1.1
+urllib3==1.26.13
+yarg==0.1.9
+zipp==3.11.0
